authentication and sad path testing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <% unless current_user %>
+    <p><%= link_to 'Sign up to be a new user', new_user_path %></p>
+    <p><%= link_to 'I already have an account', login_path %></p>
+    <% else %>
+    <p><%= link_to 'Log out', logout_path %></p>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
