Complete cart lesson

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,13 @@
     <% else %>
     <p><%= link_to 'Log out', logout_path %></p>
     <% end %>
-    
+
+    <p>Cart: <%= @cart.total_count %></p>
+
+    <% flash.each do |type, message| %>
+      <%= content_tag :div, message, class: type %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
