--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -5,4 +5,5 @@
     <li>Title: <%= song.title %></li>
     <li>Play Count: <%= song.play_count %></li>
   </ul>
+  <%= button_to "Add Song", carts_path(song_id: song.id), class: "btn btn-danger" %>
 <% end %>
