--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,5 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
+<% if @song.rating %>
+<h3>Rating: <%= @song.rating %></h3>
+<% end %>
