User story 5 complete

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Genres</h1>
 <% if current_admin? %>
-  <%= form_for @genre do |f| %>
+  <%= form_for [:admin, @genre] do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.submit "Create Genre" %>
