--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,5 +1,14 @@
 <h1>Genres</h1>
 
+<% if current_admin? %>
+	<%= form_for @genre do |f| %>
+		<%= f.label 		 :name %>
+		<%= f.text_field :name %>
+
+		<%= f.submit %>
+	<% end %>
+<% end %>
+
 <ul>
 	<% @genres.each do |genre| %>
 		<li><%= genre.name %></li>
