adds genre model, song_genres model, testing and working on it 3

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,5 @@
 <h1> <%= @song.title %> </h1>
-<p>by <%= @song.artist.name %> </p>
+<p> <%= @song.artist.name %> </p>
+<p> <%= @song.length %> </p>
+<p> <%= @song.play_count %> </p>
+<p> <%= @song.rating %> </p>
