Adds form for new genre and builds out action to create new one

--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -1,1 +1,10 @@
 <h1>Make New Genre!</h1>
+
+<%= form_for [:admin, @genre] do |f| %>
+
+<%= f.label :name %>
+<%= f.text_field :name %>
+
+<%= f.submit %>
+
+<% end %>
