Adds show view for genre

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @genres.each do |genre| %>
   <ul>
-    <li><%= genre.name %></li>
+    <li><%= link_to genre.name, genre_path(genre) %></li>
   </ul>
 <% end %>
 
