--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,11 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
 <% if @song.rating %>
-<h3>Rating: <%= @song.rating %></h3>
+  <h3>Rating: <%= @song.rating %></h3>
+<% end %>
+<% if @song.genres %>
+<h3>Genres for this Song:</h3>
+  <% @song.genres.each do |genre| %>
+    <%= genre.name %>
+  <% end %>
 <% end %>
