currentadmin not working in view removing and moving on

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Genres</h1>
 
+<% if current_admin? %>
+  <%= form_for @genre do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.submit %>
+  <% end %>
+<% end %>
 
 <% @genres.each do |g| %>
   <li><%= g.name %></li>
