--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,6 +6,8 @@
   <%= f.text_field :length %>
   <%= f.label :play_count %>
   <%= f.text_field :play_count %>
+  <%= f.label :rating %>
+  <%= f.number_field :rating %>
 
   <%= f.submit %>
 <% end %>
