Adds genres to song show

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,3 +2,10 @@
 <p>by <%= @song.artist.name %> </p>
 
 <p>Song Rating: <%= @song.rating %></p>
+
+<p>Genres for this Song:</p>
+<% @song.genres.each do |genre| %>
+  <ul>
+    <li><%= genre.name %></li>
+  </ul>
+<% end %>
