--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,4 +1,14 @@
 <h1> All Genres </h1>
+<% if @user %>
+  <% if @user.role == "admin" %>
+  <h2>Create New Genre</h2>
+  <%= form_for @genre do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.submit %>
+  <% end %>
+  <% end %>
+<% end %>
 <ul>
 <% @genres.each do |genre| %>
   <li><%= genre.name %></li>
