--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,4 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
+Play Count: <%= @song.play_count %>
+Rating: <%= @song.rating %>
