--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -7,3 +7,5 @@
     <li><%= song.title %></li>
   </ul>
 <% end %>
+
+<p>Average Song Rating: <%= @genre.avg_song_rating unless @genre.songs.empty? %></p>
