Wip admit views create new genre form

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,3 +1,10 @@
 <% @genres.each do |genre| %>
-<%= genre.name %>\
+  <%= genre.name %>
 <% end %>
+
+<h1>Create new genre:</h1>
+  <%= form_for @genre do |f| %>
+    <%= f.label :name %>:
+    <%= f.text_field :name %>
+    <%= f.submit %>
+  <% end %>
