--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @genre.name %></h1>
+<h2>Average Song Rating: <%= @genre.avg_rating %></h2>
 
 <h2>Songs in this Genre</h2>
 <% @genre_songs.each do |song| %>
