--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,11 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
 <p>Rating: <%= @song.rating %> </p>
+
+<h3>Genres for This Song</h3>
+
+<ul>
+  <% @song.genres.each do |genre| %>
+    <li><%= genre.name %> </li>
+  <% end %>
+</ul>
