--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,6 +1,11 @@
 <h1><%= @genre.name %></h1>
 <h2>Average Song Rating: <%= @genre.avg_rating %></h2>
 
+<div id="highest-rated-song">
+  <h4><%= @genre.highest_rated_song.title %></h4>
+  <p>Rating: <%= @genre.highest_rated_song.rating %></p>
+</div>
+
 <h2>Songs in this Genre</h2>
 <% @genre_songs.each do |song| %>
 	<ul>
