--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,9 +2,11 @@
   <%= genre.name %>
 <% end %>
 
-<h1>Create new genre:</h1>
-  <%= form_for @genre do |f| %>
-    <%= f.label :name %>:
-    <%= f.text_field :name %>
-    <%= f.submit %>
-  <% end %>
+<% if current_admin? %>
+  <h1>Create new genre:</h1>
+    <%= form_for @genre do |f| %>
+      <%= f.label :name %>:
+      <%= f.text_field :name %>
+      <%= f.submit %>
+    <% end %>
+<% end %>
