completes user story 8

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,3 +3,5 @@
 <%= @genre.songs.each do |song| %>
   <%= song.title %>
 <% end %>
+
+<h3>Average Rating for this Genre: <%= @average_rating.to_f.round(2) %> Stars</h3>
