Add ability to see songs associated with genre on page. ATP. 100% coverage. Done through US 6.

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -12,6 +12,6 @@
 
 <% @genres.each do |genre| %>
   <ul>
-    <l1><%= genre.name %></li>
+    <l1><%= link_to genre.name, genre_path(genre) %></li>
   </ul>
 <% end %>
