--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,10 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
+<p>Rating: <%= @song.rating %> </p>
+
+<h2>Genres for this Song:</h2>
+<ul>
+  <% @song.genres.each do |genre| %>
+    <li><%= genre.title %></li>
+  <% end %>
+</ul>
