adding more test coverage

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -4,4 +4,4 @@
   <%= song.title %>
 <% end %>
 
-<h3>Average Rating for this Genre: <%= @average_rating.to_f.round(2) %> Stars</h3>
+<h3>Average Rating for this Genre: <%= @average_rating %> Stars</h3>
