--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,3 +2,8 @@
 <p>by <%= @song.artist.name %> </p>
 <p>Play Count: <%= @song.play_count %></p>
 <p>Rating: <%= @song.rating %></p>
+
+<h3>Genres for this song</h3>
+<% @genres.each do |genre| %>
+  <li><%= genre.name %></li>
+<% end %>
