Adds class methods to song/genre show view

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -8,4 +8,8 @@
   </ul>
 <% end %>
 
-<p>Average Song Rating: <%= @genre.avg_song_rating unless @genre.songs.empty? %></p>
+<% unless @genre.songs.empty? %>
+  <p>Average Song Rating: <%= @genre.avg_song_rating %></p>
+  <p>Song with highest rating: <%= @genre.highest_rated.title %> with a rating of <%= @genre.highest_rated.rating %></p>
+  <p>Song with lowest rating: <%= @genre.lowest_rated.title %> with a rating of <%= @genre.lowest_rated.rating %></p>
+<% end %>
