--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -9,3 +9,12 @@
     <li><%= genre.name %></li>
   </ul>
 <% end %>
+
+<p>Songs with the same rating: </p>
+ <div class='similar-songs'>
+   <% @song.similar_songs.each do |similar_song| %>
+     <ul>
+       <li><%= similar_song.title %></li>
+     </ul>
+  <% end %>
+</div>
