--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,10 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
 <p>Rating: <%= @song.rating %> </p>
+
+<h4>Genres For This Song</h4>
+<% @song.genres.each do |genre| %>
+<ul>
+  <li> <%= genre.name %> </li>
+</ul>
+<% end %>
