forgot to add links to each genre on the index page, did that just in time

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -6,6 +6,6 @@
 
 <% @genres.each do |genre| %>
   <ul>
-    <li><%= genre.name %></li>
+    <li><%= link_to "#{genre.name}", genre_path(genre) %></li>
   </ul>
 <% end %>
