--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,9 +1,9 @@
 <% @genres.each do |genre| %>
-<%= genre.name %>
+<%= link_to genre.name, genre_path(genre) %>
 <% end %>
 
 <% if current_admin? %>
-  <%= form_for [:admin, @genre] do |f| %>
+  <%= form_for @genre do |f| %>
       <%= f.label :name %>
       <%= f.date_field :name %>
       <%= f.submit %>
