--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,12 @@
+<h1> Genres for this <%= @song.title %>
+  
+<% @song.genres.each do |genre| %>
+  <%= genre.name %>
+<% end %>
+
+
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
+<p>by <%= @song.rating %> </p>
+
+
