--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,4 @@
-<h1> <%= @song.title %> </h1>
-<p>by <%= @song.artist.name %> </p>
+<h1> <%= @song.title %> </h1> - by <%= @song.artist.name %> </h1>
+<p>Length: <%= @song.length %> </p>
+<p>Play Count: <%= @song.play_count %> </p>
+<p>Rating: <%= @song.rating %> </p>
