Adds genre form on genre index page

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -3,5 +3,9 @@
 <% end %>
 
 <% if current_admin? %>
-<%= link_to 'Create Genre', new_admin_genre_path %>
+  <%= form_for [:admin, @genre_new] do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name%>
+    <%= f.submit 'Submit' %>
+  <% end %>
 <% end %>
