--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,5 +1,5 @@
 <% @genre.songs.each do |song| %>
-<li> <%=song.name %></li>
+<li> <%=song.title %></li>
 <li><%= song.length%></li>
 <li><%= song.play_count%></li>
   <% end %>
