--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,8 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
 <p>Rating: <%= @song.rating %></p>
+<h2>Genres for this Song</h2>
+
+<% @song.genres.each do |genre| %>
+<li> <%=genre.name %></li>
+  <% end %>
