--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,3 +3,4 @@
 <li><%= song.length%></li>
 <li><%= song.play_count%></li>
   <% end %>
+  <p> Average rating for songs in this genre: <%= @average_rating %></p>
