--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -3,9 +3,9 @@
 <% end %>
 
 <% if current_admin? %>
-  <%= form_for @genre do |f| %>
+  <%= form_for [:admin, @genre] do |f| %>
       <%= f.label :name %>
       <%= f.date_field :name %>
-      <%= f.submit %>
+      <%= f.submit 'Create Genre' %>
     <% end %>
 <% end %>
