--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -5,7 +5,7 @@
   <li><%= link_to "#{g.name}", genre_path(g) %></li>
   <% end %>
 
-
+<% if current_admin? %>
     <%= form_for [:admin, @genre] do |f| %>
       <div>
       <%= f.label :name%>
@@ -14,4 +14,5 @@
       <div>
 <%= f.submit %>
 </div>
+<% end %>
 <% end %>
