--- a/app/views/awards/index.html.erb
+++ b/app/views/awards/index.html.erb
@@ -8,10 +8,5 @@
 
 <% if current_admin? %>
   <h5>Create a New Award</h5>
-  <% form_for [:admin, @award] do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-
-    <%= f.submit %>
-  <% end %>
+  <%= render partial: "form" %>
 <% end %>
