--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,7 @@
 <h1> <%= @song.title %> </h1>
 <p>by <%= @song.artist.name %> </p>
+<li>Awards for this Song:
+<% @song.awards.each do |a| %>
+  <%= a.name %>
+  <% end %>
+</li>
